comment screen is ready.

--- a/PostsApp/Views/Base.lproj/Main.storyboard
+++ b/PostsApp/Views/Base.lproj/Main.storyboard
@@ -68,14 +68,55 @@
         <!--Comments-->
         <scene sceneID="YTU-bT-8U5">
             <objects>
-                <viewController id="nsd-5u-Nzd" sceneMemberID="viewController">
+                <viewController id="nsd-5u-Nzd" customClass="SecondViewController" customModule="PostsApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gzK-6H-1a4">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="dkz-6l-seV">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="secondCell" textLabel="cei-t6-O82" detailTextLabel="Ebh-W9-nTz" rowHeight="100" style="IBUITableViewCellStyleSubtitle" id="YV8-Te-UGU">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="100"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="YV8-Te-UGU" id="lqb-Ah-EED">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="cei-t6-O82">
+                                                    <rect key="frame" x="20" y="31.5" width="45.5" height="17.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" name="Menlo-Bold" family="Menlo" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Ebh-W9-nTz">
+                                                    <rect key="frame" x="20" y="51.5" width="44" height="14.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="rqp-Uq-Rzm" firstAttribute="bottom" secondItem="dkz-6l-seV" secondAttribute="bottom" id="01B-05-e5d"/>
+                            <constraint firstItem="rqp-Uq-Rzm" firstAttribute="trailing" secondItem="dkz-6l-seV" secondAttribute="trailing" id="7K1-wv-672"/>
+                            <constraint firstItem="dkz-6l-seV" firstAttribute="top" secondItem="rqp-Uq-Rzm" secondAttribute="top" id="C3y-Lr-xpn"/>
+                            <constraint firstItem="dkz-6l-seV" firstAttribute="leading" secondItem="rqp-Uq-Rzm" secondAttribute="leading" id="Rgi-LP-Gee"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="rqp-Uq-Rzm"/>
                     </view>
                     <navigationItem key="navigationItem" title="Comments" id="rPf-2V-SMT"/>
+                    <connections>
+                        <outlet property="table" destination="dkz-6l-seV" id="8Zp-fn-QDX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2rr-Xe-Kgp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -89,6 +130,8 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="MeK-wl-SYO">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" red="0.82504850630000004" green="0.96165710689999995" blue="0.89155012369999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
